<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    tools:context="com.kotlinca.assignment.QuesOne">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microsoft_teams_text"
        android:textColor="@color/color_use_main"
        android:textSize="30sp"
        >
    </TextView>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/teams"
        >
    </ImageView>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started_text"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/color_use_text"
        >
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/color_edit_txt_bg"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/edit_text_hint"
        android:textColorHint="@color/color_use_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="5dp"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/color_button_signin"
        app:cornerRadius="10dp"
        android:text="@string/signin_btn_text"
        android:textAllCaps="false" >
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_help_text"
        android:textColor="@color/color_use_main"
        android:layout_gravity="center_horizontal"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        >
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:stateListAnimator="@null"
        app:cornerRadius="6dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/color_use_main"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/join_meet_text"
        android:textColor="@color/color_use_main"
        android:textSize="10sp"
        >
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:stateListAnimator="@null"
        app:cornerRadius="6dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/color_use_main"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/signup_text"
        android:textColor="@color/color_use_main"
        app:icon="@drawable/microsoft"
        app:iconTintMode="multiply"
        app:iconGravity="textStart"
        android:textSize="10sp"
        android:gravity="center"
        android:textAllCaps="true"
        >
    </com.google.android.material.button.MaterialButton>


</LinearLayout>